--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,7 @@
 coffline.error.validation = Validation Error
+coffline.error.userExist = There is a user with the same email address
+coffline.error.userNotFound = User not found
+coffline.error.userIsNotActive = User is not active
+
+coffline.message.registeredSuccessfully = User registered successfully
+coffline.message.loginSuccessfull = Login successfull
