--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -1,1 +1,7 @@
-coffline.error.validation = Validasyon Hatas\u0131n
+coffline.error.validation = Validasyon Hatas\u0131
+coffline.error.userExist = Ayn\u0131 e-posta adresine sahip kullan\u0131c\u0131 mevcut
+coffline.error.userNotFound = Kullan\u0131c\u0131 bulunamad\u0131
+coffline.error.userIsNotActive = Kullan\u0131c\u0131 aktif de\u011Fil
+
+coffline.message.registeredSuccessfully = Kullan\u0131c\u0131 ba\u015Far\u0131l\u0131 bir \u015Fekilde kay\u0131t edildi
+coffline.message.loginSuccessfull = Giri\u015F Ba\u015Far\u0131l\u0131
